--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.1/math.min.js"></script> -->
+
 
 </head>
 
@@ -14,35 +16,49 @@
     <h1>Behold, a scientific calculator.</h1>
     <div id="calc-container">
         <div id="display">
-            <p id="operation">0</p>
+            <p id="operation"></p>
 
 
             <div id="results">
                 <p>=</p>
-                <p id="output">10</p>
+                <p id="output">0</p>
             </div>
 
         </div>
 
         <div id="input">
             <div id="keys">
+
+                
+                <button onclick="appendToOperation('sin(')" class="operator-btn ">sin</button>
+                <button onclick="appendToOperation('tan(')" class="operator-btn">tan</button>
                 <button onclick="appendToOperation('+')" class="operator-btn">+</button>
                 <button onclick="appendToOperation('7')">7</button>
                 <button onclick="appendToOperation('8')">8</button>
                 <button onclick="appendToOperation('9')">9</button>
+                <button onclick="clearDisplay()" class="operator-btn">C</button>
+                <button onclick="appendToOperation('cos(')" class="operator-btn">cos</button>
+                <button onclick="appendToOperation('log(')" class="operator-btn">log</button>
                 <button onclick="appendToOperation('-')" class="operator-btn">-</button>
                 <button onclick="appendToOperation('4')">4</button>
                 <button onclick="appendToOperation('5')">5</button>
                 <button onclick="appendToOperation('6')">6</button>
+                <button onclick="appendToOperation('(')" class="operator-btn">(</button>
+                <button onclick="appendToOperation('π')">π</button>
+                <button onclick="appendToOperation('e')">e</button>
                 <button onclick="appendToOperation('×')" class="operator-btn">×</button>
                 <button onclick="appendToOperation('1')">1</button>
                 <button onclick="appendToOperation('2')">2</button>
                 <button onclick="appendToOperation('3')">3</button>
+                <button onclick="appendToOperation(')')" class="operator-btn">)</button>
+                <button onclick="appendToOperation('°')">°</button>
+                <button onclick="appendToOperation('^')" class="operator-btn">^</button>
                 <button onclick="appendToOperation('/')" class="operator-btn">/</button>
+                <button onclick="appendToOperation('exp(')" class="operator-btn">exp</button>
                 <button onclick="appendToOperation('0')">0</button>
                 <button onclick="appendToOperation('.')">.</button>
+
                 <button onclick="calculate()">=</button>
-                <button onclick="clearDisplay()" class="operator-btn">C</button>
             </div>
 
         </div>
